[package]
name = "lirstings"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive", "env"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
syntastica = { version = "0.4.1", features = ["serde"], git = "https://github.com/RubixDev/syntastica", rev = "71546d509ae184c2ec5d886b3382d1e7a059ee04" }
syntastica-parsers-git = { version = "0.4.1", features = ["all"], git = "https://github.com/RubixDev/syntastica", rev = "71546d509ae184c2ec5d886b3382d1e7a059ee04" }
syntastica-themes = { version = "0.4.1", git = "https://github.com/RubixDev/syntastica", rev = "71546d509ae184c2ec5d886b3382d1e7a059ee04" }
