[package]
name = "lirstings"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive", "env"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
syntastica = { version = "0.5.0", features = ["serde"] }
syntastica-parsers-dynamic = { version = "0.5.0" }
syntastica-parsers-git = { version = "0.5.0", features = ["all"] }
syntastica-themes = { version = "0.5.0" }
