[package]
name = "typst-lirstings"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syntastica = { version = "0.6.0", features = ["serde"] }
syntastica-parsers-dynamic = { version = "0.6.0" }
syntastica-parsers-git = { version = "0.6.0", features = ["all"] }
syntastica-themes = { version = "0.6.0" }
